# finops-tag-compliance-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLOUDWATCH_LOGGING.md  CREATE_GITHUB_REPO.md  DIFFERENTIATION-FROM-AWS-NATIVE.md  Dockerfile  ERROR_SANITIZATION_GUIDE.md  LICENSE  MONETIZATION.md  POWER.md  PR_DESCRIPTION.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY_CONFIGURATION.md  SPECIFICATION.md  TASK_2.1_SUMMARY.md  TASK_23.1_SUMMARY.md  TASK_42.3_SUMMARY.md  TASK_45.1_SUMMARY.md  TASK_45.2_SUMMARY.md  TASK_48.1_SUMMARY.md  TASK_48.2_SUMMARY.md  TASK_4_SUMMARY.md  TASK_5.2_SUMMARY.md  TEST_INFRASTRUCTURE.md  TOMORROW_MORNING_PLAN.md  UAT_PROTOCOL.md  compliance_history.db  docker-compose.windows.yml  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  run_server.py  run_tests.bat  run_tests.py  run_tests.sh  (+6 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  branch-validation.yml  ci.yml  code-quality.yml  integration-tests.yml  test-coverage.yml  test-fast.yml
.hypothesis/constants/: 0120dc2b8f414483  04135f0e112513f5  04289c3cf111a1f1  050d5849c585a776  0920c234bf13e053  0a2530c28b7d890d  0a338d2ad7226b45  0a5f1524d811d64b  10b79652db988adb  132de5c124de63e9  179fc57a92785455  198084449ef44819  1f25bb3718546389  1f28ee655f677ccf  1ff03be7a83a10b3  239969d468e2beb7  2a8edd27b8f973b8  2b2c06e49e0cba21  2be0816571505a7c  2d28346f16d43628  2f6c14f09a590211  30b2221282bb5de8  31361cd43333ef66  37cbf5213f289097  39816632f49048fa  3ca36fe22df52de7  3e7afb16543ddce3  42f1101c16c2779d  43a01fb2002578c3  473afa93a815cbb1  47799f24e2c1f2f2  4800eaf939c65fa6  5118c32cae7bddd0  530af70cfa6f68f0  5ba55c8133915e1c  5e1610386fc92973  5ea3cb154c43c8e9  5f4ddbbfa7ccf41c  66b43af27a4df911  68aaa991e91fbed8  (+82 more)
.hypothesis/tmp/: tmp0pj77jju  tmp0zazsa9x  tmp0zundvdn  tmp1hjjrjxz  tmp1tka_0ix  tmp1x1rwfp_  tmp322q2x1p  tmp3kpovzcm  tmp40nfqh_b  tmp46u0h4nl  tmp4ejkvw1f  tmp54i1svtn  tmp61wiysfx  tmp6kbcdf32  tmp6q8t9dsy  tmp7p5fkw5a  tmp9r5blvkk  tmp_82fsxdw  tmpa8w39flx  tmpayyc8377  tmpbfnhgwwd  tmpcaq0bdmd  tmpcjkrlsgu  tmpctsu1wd1  tmpdpfe3ao4  tmpemyb379i  tmpf2p9eg4l  tmpfkoo_bwn  tmpgi434hfh  tmph8d9g_j3  tmphaydm83i  tmphe0e4zru  tmpii9a7mor  tmpjuya6f2y  tmpkb4rbwrw  tmpkl97e5ty  tmpl40zo33i  tmpla3f7mua  tmplcp3yju2  tmplgep6ol3  (+19 more)
.kiro/steering/: mcp-tool-patterns.md  project-standards.md  tagging-policy.md  testing-guidelines.md
archive/: README.md
archive/development/: debug_compliance_flow.py  debug_compliance_test.py  debug_cost_attribution.py  debug_ec2_issue.py  debug_ec2_oneliner.py  test_ec2_compliance.py
archive/specs/: POLICY_GENERATOR_PROMPT.md  REFACTORING_PLAN.md  SPECIFICATION.md
config/: resource_types.json  resource_types.schema.json
docs/: AUDIT_LOGGING.md  BETA_TESTER_ONBOARDING.md  BETA_TESTER_PITCH.md  BETA_TESTER_PITCH_EN.md  BUGFIX_SUMMARY.md  CLOUDWATCH_LOGGING.md  DEPLOYMENT.md  DEPLOY_MULTI_ACCOUNT.md  DEVELOPMENT_JOURNAL.md  DIFFERENTIATION-FROM-AWS-NATIVE.md  ERROR_SANITIZATION_GUIDE.md  GITHUB_PROJECT_GUIDE.md  GITHUB_PROJECT_SETUP_FR.md  IAM_PERMISSIONS.md  MCP_SECURITY_BEST_PRACTICES.md  MONETIZATION.md  MULTI_ACCOUNT_IMPLEMENTATION_PLAN.md  NDA_TEMPLATE_FR.md  PHASE-1-SPECIFICATION.md  PHASE-1.7-SPECIFICATION.md  PHASE-2-SPECIFICATION.md  PHASE-2.6-SPECIFICATION.md  PHASE-3-SPECIFICATION.md  PHASE_2_UAT_GUIDE.md  PHASE_2_UAT_PROTOCOL.md  POLICY_GENERATOR_PROMPT.md  POLICY_UPDATE_WORKFLOW.md  README.md  RESOURCE_TYPE_CONFIGURATION.md  ROADMAP.md  SIMPLE_CONFIDENTIALITY_AGREEMENT.md  SPECIFICATION.md  TAGGING_POLICY_GUIDE.md  TESTING_QUICK_START.md  TOOL_LOGIC_REFERENCE.md  TOOL_SEARCH_CONFIGURATION.md  TROUBLESHOOTING_UAT_ISSUES.md  UAT_OPEN_SOURCE.md  UAT_PROTOCOL.md  UAT_RESULTS_2026-02-21.md  (+3 more)
docs/UAT/: GENAI_AND_AGENTS_TESTING_GUIDELINES.md  MVP UAT One-Page Overview.md  PHASE_2_UAT_PROTOCOL.md
docs/business/: BETA_TESTER_PITCH_EN.md  DEMO_LOOM.md  LICENSE_SYSTEM_IMPLEMENTATION.md  MONETIZATION.md  TESTER_ONBOARDING_GUIDE.md  🎥 Demo Video Script — under 60 seconds.md
docs/diagrams/: 00-diagram-best-practices.md  01-system-architecture.md  02-state-machine-diagrams.md  03-sequence-diagrams.md  04-component-diagram.md  05-deployment-architecture.md  06-production-cloudformation-architecture.md  README.md  finops-mcp-architecture.drawio  mcp-tool-flow.drawio
docs/security/: IAM_PERMISSIONS.md  MCP_SECURITY_BEST_PRACTICES.md  SECURITY_AND_ANTI_HALLUCINATION.md  SECURITY_CONFIGURATION.md
examples/: README.md  audit_logging_demo.py  aws_tag_policy_example.json  claude_desktop_config_local.json  claude_desktop_config_production.json  claude_desktop_config_remote.json  claude_desktop_config_stdio.json  input_validation_demo.py
infrastructure/: cloudformation-client-readonly.yaml  cloudformation-production.yaml  cloudformation.yaml
mcp_server/: __init__.py  __main__.py  config.py  container.py  http_config.py  main.py  mcp_handler.py  stdio_server.py
mcp_server/clients/: __init__.py  aws_client.py  cache.py  regional_client_factory.py
mcp_server/middleware/: README.md  __init__.py  audit_middleware.py  auth_middleware.py  budget_middleware.py  correlation_middleware.py  cors_middleware.py  sanitization_middleware.py
mcp_server/models/: __init__.py  audit.py  budget.py  compliance.py  cost_attribution.py  enums.py  health.py  history.py  loop_detection.py  multi_region.py  observability.py  policy.py  report.py  resource.py  suggestions.py  untagged.py  validation.py  violations.py
mcp_server/services/: __init__.py  audit_service.py  auto_policy_service.py  (+11 more)
policies/: tagging_policy.json  tagging_policy_converted.json
scripts/: POLICY_DEPLOY_SETUP.md  convert_aws_policy.py  debug_cost_attribution.py  deploy_ec2.sh  deploy_ecs.sh  deploy_policy.ps1  deploy_policy.sh  local_test.py  mcp_bridge.py  setup-github-project.sh  setup_persistent_storage.bat  setup_persistent_storage.sh  start-tagging-mcp.sh
steering/: compliance-check.md  cost-attribution.md  policy-import.md  remediation.md
tests/: README.md  __init__.py  conftest.py  uat_all_mode.py
(+446 files in other folders)
